# localstack-fanout-demo

./: README.md
js/: .env.sample  README.md  bun.lockb  consumer.ts  package.json
localstack/: boot.sh  docker-compose.yml  stop.sh
localstack/sh/: setup.sh
php/: .env.sample  README.md  composer.json  index.php
php/src/: SqsConsumer.php
python/: .env.sample  .gitignore  README.md  pyproject.toml
python/sqs_consumer/: consumer.py
